<resources>
    <string name="app_name">Signaling1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_loacte_user">LoacteUser</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="registration">REGISTRATION</string>
    <string name="first_name">First Name</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
</resources>