<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:background="@color/teal_700"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:id="@+id/reg_text"
            android:layout_marginTop="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"  />


        <EditText
            android:id="@+id/name_text_et"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:hint="@string/first_name"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:background="@color/white"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_text"
            android:autofillHints=""
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/last_name_text_et"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:hint="@string/last_name"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:background="@color/white"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text_et"
            android:autofillHints=""
            tools:ignore="RtlSymmetry,TextFields"
             />

        <EditText
            android:id="@+id/age_text_et"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:hint="@string/age"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:background="@color/white"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name_text_et"
            android:autofillHints=""
            tools:ignore="RtlSymmetry,TextFields" />

            <EditText
                android:id="@+id/user_name_text_et"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="36dp"
                android:hint="@string/user_name"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:background="@color/white"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/age_text_et"
                android:autofillHints=""
                tools:ignore="TextFields" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="608dp"

            android:text="@string/login"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

           



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>